--- a/jm-project-board/src/main/resources/templates/articles/detail.html
+++ b/jm-project-board/src/main/resources/templates/articles/detail.html
@@ -3,30 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>게시글 페이지</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
 <header id="main-header"></header>
 
-<main>
-    <header>
+<main class="container">
+    <header class="py-5 text-center">
         <h1>첫번째 글</h1>
     </header>
 
-    <aside>
-        <p>Uno</p>
-        <p><a href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
-        <p><time datetime="2022-01-01T00:00:00">2022-01-01</time></p>
-        <p>#java</p>
-    </aside>
+    <div class="row g-5">
+        <section class="col-md-5 col-lg-4 order-md-last">
+            <aside>
+                <p><span class="nick-name">Uno</span></p>
+                <p><a class="u-url" rel="me" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
+                <p>
+                    <time datetime="2022-01-01T00:00:00">2022-01-01</time>
+                </p>
+                <p>#java</p>
+            </aside>
+        </section>
+        <article class="col-md-7 col-lg-8">
+            <p>본문<br><br></p>
+        </article>
+    </div>
 
-    <section>
-        <p>본문<br><br></p>
-
-        <div>
-            <form>
-                <label for="articleComment" hidden>댓글</label>
-                <textarea id="articleComment" placeholder="댓글 쓰기.." rows="3"></textarea>
-                <button type="submit">쓰기</button>
+    <div class="row g-5">
+        <section>
+            <form class="row g-3">
+                <div class="col-8">
+                    <label for="comment-textbox" hidden>댓글</label>
+                    <textarea class="form-control" id="comment-textbox" placeholder="댓글 쓰기.." rows="3"></textarea>
+                </div>
+                <div class="col-auto">
+                    <label for="comment-submit" hidden>댓글 쓰기</label>
+                    <button class="btn btn-primary" id="comment-submit" type="submit">쓰기</button>
+                </div>
             </form>
 
             <ul>
@@ -51,19 +66,33 @@
                     </div>
                 </li>
             </ul>
-        </div>
 
-        <nav>
-            <a href="#">이전 글</a>
-            <a href="#">다음 글</a>
+        </section>
+    </div>
+
+    <div class="row g-5">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo; prev</span>
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">next &raquo;</span>
+                    </a>
+                </li>
+            </ul>
         </nav>
-    </section>
+    </div>
 
 </main>
 
 
-
 <footer id="main-footer"></footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
 </html>
