--- a/jm-project-board/src/main/resources/templates/articles/index.html
+++ b/jm-project-board/src/main/resources/templates/articles/index.html
@@ -9,7 +9,10 @@
     <link href="/css/search-bar.css" rel="stylesheet">
 </head>
 <body>
-<header id="main-header"></header>
+<header id="main-header">
+    헤더 삽입부
+    <hr>
+</header>
 
 <main class="container">
     <div class="row">
@@ -54,22 +57,22 @@
     </div>
 
 
-    <table class="table">
+    <table class="table" id="article-table">
         <thead>
         <tr>
-            <th class="col-6">제목</th>
-            <th class="col-2">해시태그</th>
-            <th class="col">작성자</th>
-            <th class="col">작성일</th>
+            <th class="title col-6">제목</th>
+            <th class="hashtag col-2">해시태그</th>
+            <th class="user-id col">작성자</th>
+            <th class="created-by col">작성일</th>
         </tr>
         </thead>
 
         <tbody>
         <tr>
-            <td>첫글</td>
-            <td>#java</td>
-            <td>jm</td>
-            <td>2022-01-01</td>
+            <td class="title"><a>첫글</a></td>
+            <td class="hashtag">#java</td>
+            <td class="user-id">jm</td>
+            <td class="created-by"><time>2022-01-01</time></td>
         </tr>
         <tr>
             <td>두번글</td>
@@ -102,7 +105,10 @@
 </main>
 
 
-<footer id="main-footer"></footer>
+<footer id="main-footer">
+    footer
+    <hr/>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
