--- a/jm-project-board/src/main/resources/templates/articles/detail.html
+++ b/jm-project-board/src/main/resources/templates/articles/detail.html
@@ -2,32 +2,39 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>게시글 페이지</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</head>
-<body>
-<header id="main-header"></header>
+    <meta name="description" content="">
+    <meta name="author" content="Uno Kim">
+    <title>게시글 페이지</title>
 
-<main class="container">
-    <header class="py-5 text-center">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="/css/articles/article-content.css" rel="stylesheet">
+</head>
+
+<body>
+
+<header id="main-header">
+    헤더 삽입부
+    <hr>
+</header>
+
+<main id="article-main" class="container">
+    <header id="article-header" class="py-5 text-center">
         <h1>첫번째 글</h1>
     </header>
 
     <div class="row g-5">
         <section class="col-md-5 col-lg-4 order-md-last">
             <aside>
-                <p><span class="nick-name">Uno</span></p>
-                <p><a class="u-url" rel="me" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
-                <p>
-                    <time datetime="2022-01-01T00:00:00">2022-01-01</time>
-                </p>
-                <p>#java</p>
+                <p><span id="nickname">Uno</span></p>
+                <p><a id="email" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
+                <p><time id="created-at" datetime="2022-01-01T00:00:00">2022-01-01</time></p>
+                <p><span id="hashtag">#java</span></p>
             </aside>
         </section>
-        <article class="col-md-7 col-lg-8">
-            <p>본문<br><br></p>
+
+        <article id="article-content" class="col-md-7 col-lg-8">
+            <pre>본문<br><br></pre>
         </article>
     </div>
 
@@ -44,11 +51,11 @@
                 </div>
             </form>
 
-            <ul>
+            <ul id="article-comments" class="row col-7">
                 <li>
                     <div>
-                        <time><small>2022-01-01</small></time>
                         <strong>Uno</strong>
+                        <small><time>2022-01-01</time></small>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                             Lorem ipsum dolor sit amet
@@ -57,8 +64,8 @@
                 </li>
                 <li>
                     <div>
-                        <time><small>2022-01-01</small></time>
                         <strong>Uno</strong>
+                        <small><time>2022-01-01</time></small>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                             Lorem ipsum dolor sit amet
@@ -89,10 +96,11 @@
 
 </main>
 
+<footer id="main-footer">
+    <hr>
+    푸터 삽입부
+</footer>
 
-<footer id="main-footer"></footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
